# summarizer

./: Cargo.toml
custom_models/: summarizer
models/: summarizer  synthesizer
src/: main.rs  summarizer.rs  synthesizer.rs  utils.rs
src/tests/: message_with_think.txt  message_without_think.txt
