[package]
name = "summarize"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
ollama-rs = "0.3.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.2"
zr_app = { git = "https://github.com/zirkonya/zr_app", features = ["macros"], version = "0.1.0" }
